--- a/assets/scss/store.scss
+++ b/assets/scss/store.scss
@@ -460,4 +460,10 @@
             }
         }
     }
+
+    @media (max-width: 576px) {
+        .mb-mobile {
+            margin-bottom: 20px;
+        }
+    }
 }
