--- a/admin/views/admin.html
+++ b/admin/views/admin.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Admin Page</title>
-        <link rel="stylesheet" href="../css/reset.css" />
-        <link rel="stylesheet" href="../css/admin.css" />
-        <link rel="stylesheet" href="../css/global.css" />
+        <link rel="stylesheet" href="../../assets/css/reset.css" />
+        <link rel="stylesheet" href="../../assets/css/admin.css" />
+        <link rel="stylesheet" href="../../assets/css/global.css" />
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -29,12 +29,11 @@
         <div class="admin-wrapper">
             <div
                 class="include-header"
-                w3-include-html="../components/header/header.html"
+                w3-include-html="../../assets/components/header/header.html"
             ></div>
-
             <div class="body-content-admin container">
                 <h1 class="text-center">Quản lí sản phẩm của bạn</h1>
-                <div class="row mb-4">
+                <div class="row mb-4 px-mobile">
                     <div class="col-4">
                         <div class="filter-product">
                             <select
@@ -82,25 +81,27 @@
                         </div>
                     </div>
                 </div>
-                <table class="table mt-4">
-                    <thead class="table-dark">
-                        <tr>
-                            <th scope="col">STT</th>
-                            <th scope="col">Tên SP</th>
-                            <th scope="col">Hãng</th>
-                            <th scope="col">Giá</th>
-                            <th scope="col" class="col-2 text-center">
-                                Action
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody class="t-body-render-admin"></tbody>
-                </table>
+                <div class="tabel-content">
+                    <table class="table mt-4">
+                        <thead class="table-dark">
+                            <tr>
+                                <th scope="col">STT</th>
+                                <th scope="col">Tên SP</th>
+                                <th scope="col">Hãng</th>
+                                <th scope="col">Giá</th>
+                                <th scope="col" class="col-2 text-center">
+                                    Action
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody class="t-body-render-admin"></tbody>
+                    </table>
+                </div>
             </div>
 
             <div
                 class="include-header"
-                w3-include-html="../components/footer/footer.html"
+                w3-include-html="../../assets/components/footer/footer.html"
             ></div>
 
             <!-- Modal -->
@@ -245,7 +246,7 @@
             </div>
         </div>
 
-        <script src="../js/admin.js"></script>
-        <script src="../js/include.js"></script>
+        <script src="../../assets/js/admin.js"></script>
+        <script src="../../assets/js/include.js"></script>
     </body>
 </html>
