--- a/assets/components/header/header.html
+++ b/assets/components/header/header.html
@@ -4,47 +4,68 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="../css/header.css" />
+        <link rel="stylesheet" href="../../assets/css/header.css" />
     </head>
     <body>
         <div class="header-wrapper header__slide__down">
             <div class="container">
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="left-header">
-                        <a href="/assets/page/store.html">
+                        <a href="/">
                             <h1><i class="bi bi-amd"></i> Flag Shop</h1></a
                         >
                         <span>
-                            <a href="/assets/page/index.html">Home</a>
+                            <a href="/">Home</a>
                         </span>
                         <span>
-                            <a href="/assets/page/admin.html">Admin</a>
+                            <a href="/admin/views/admin.html">Admin</a>
                         </span>
                         <span>
-                            <a href="/assets/page/store.html">Store</a>
+                            <a href="/customer/views/store.html">Store</a>
                         </span>
                     </div>
                     <div class="right-header">
                         <a href="tel:082342423">098765443</a>
+                        <label
+                            for="header-active"
+                            class="dropdown-menu-wrapper"
+                        >
+                            <i class="bi bi-three-dots-vertical"></i>
+                            <input type="checkbox" hidden id="header-active" />
+
+                            <label
+                                for="header-active"
+                                class="menu-phone-wrappper"
+                            >
+                                <div class="over-lay-header-mobile"></div>
+                                <ul>
+                                    <label
+                                        for="header-active"
+                                        class="close-header"
+                                    >
+                                        <i class="bi bi-backspace"></i>
+                                    </label>
+                                    <li>
+                                        <a href="../../../index.html">Home</a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="../../../admin/views/admin.html"
+                                            >Admin</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="../../../customer/views/store.html"
+                                            >Store</a
+                                        >
+                                    </li>
+                                </ul>
+                            </label>
+                        </label>
                     </div>
                 </div>
             </div>
         </div>
-        <script>
-            let HeaderWp = document.querySelector(".header-wrapper");
-
-            console.log(HeaderWp);
-
-            function handleScroll() {
-                console.log("lot");
-                if (window.scrollY <= 70) {
-                    HeaderWp.classList.remove("header__slide__down");
-                } else if (window.scrollY >= 200) {
-                    HeaderWp.classList.add("header__slide__down");
-                }
-            }
-
-            window.addEventListener("scroll", handleScroll);
-        </script>
     </body>
 </html>
