--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,12 +1,29 @@
 .admin-wrapper {
   height: 100vh;
   overflow: auto;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 .admin-wrapper .body-content-admin {
   min-height: 60vh;
   margin-top: 70px;
   padding: 30px 0;
 }
+@media (max-width: 576px) {
+  .admin-wrapper .body-content-admin .tabel-content {
+    overflow-x: auto;
+    max-width: 100vw;
+  }
+}
 .admin-wrapper h1 {
   font-size: 24px;
+}
+
+@media (max-width: 576px) {
+  .px-mobile {
+    padding: 10px 20px;
+  }
+  .mb-mobile {
+    margin-bottom: 20px;
+  }
 }/*# sourceMappingURL=admin.css.map */
