--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -1,14 +1,33 @@
 .admin-wrapper {
     height: 100vh;
     overflow: auto;
+    max-width: 100vw;
+    overflow-x: hidden;
 
     .body-content-admin {
         min-height: 60vh;
         margin-top: 70px;
         padding: 30px 0;
+
+        @media (max-width: 576px) {
+            .tabel-content {
+                overflow-x: auto;
+                max-width: 100vw;
+            }
+        }
     }
 
     h1 {
         font-size: 24px;
+    }
+}
+
+@media (max-width: 576px) {
+    .px-mobile {
+        padding: 10px 20px;
+    }
+
+    .mb-mobile {
+        margin-bottom: 20px;
     }
 }
