--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -10,6 +10,15 @@
     gap: 60px;
     color: #333;
 
+    @media (max-width: 575.98px) {
+        flex-direction: column;
+
+        div {
+            width: 300px;
+            height: 300px;
+        }
+    }
+
     a {
         text-decoration: none;
         color: currentColor;
