--- a/customer/views/store.html
+++ b/customer/views/store.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Store Page</title>
-        <link rel="stylesheet" href="../css/reset.css" />
-        <link rel="stylesheet" href="../css/store.css" />
-        <link rel="stylesheet" href="../css/global.css" />
+        <link rel="stylesheet" href="../../assets/css/reset.css" />
+        <link rel="stylesheet" href="../../assets/css/store.css" />
+        <link rel="stylesheet" href="../../assets/css/global.css" />
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -30,7 +30,7 @@
             <div>
                 <div
                     class="include-header"
-                    w3-include-html="../components/header/header.html"
+                    w3-include-html="../../assets/components/header/header.html"
                 ></div>
                 <div class="banner-image">
                     <div class="container py-5">
@@ -73,7 +73,10 @@
                                 class="col-lg-6 text-lg-right text-center mt-5 mt-lg-0"
                             >
                                 <div class="banner-phone-image">
-                                    <img src="../img/s22.png" alt="phone-img" />
+                                    <img
+                                        src="../../assets/img/s22.png"
+                                        alt="phone-img"
+                                    />
                                 </div>
                             </div>
                         </div>
@@ -275,19 +278,18 @@
             </div>
             <div class="cart-wrapper-icon">
                 <img
-                    src="../img/cart.4c9ba9e8b1491267cbd3.png"
+                    src="../../assets/img/cart.4c9ba9e8b1491267cbd3.png"
                     alt="Giỏ hàng"
                 />
                 <span class="jsx-count-cart">0</span>
             </div>
             <div
                 class="include-header"
-                w3-include-html="../components/footer/footer.html"
+                w3-include-html="../../assets/components/footer/footer.html"
             ></div>
         </div>
 
-        <script src="../js/global.js"></script>
-        <script src="../js/store.js"></script>
-        <script src="../js/include.js"></script>
+        <script src="../../assets/js/store.js"></script>
+        <script src="../../assets/js/include.js"></script>
     </body>
 </html>
