--- a/assets/components/footer/footer.html
+++ b/assets/components/footer/footer.html
@@ -7,66 +7,124 @@
         <link rel="stylesheet" href="../../assets/css/footer.css" />
     </head>
     <body>
-        <div class="footer">
-            <div class="footer-wrapper">
+        <div class="footer-wrapper-sell">
+            <img
+                src="../../assets/img//blur1.97b203da81cf6e72b64a.png"
+                alt=""
+                class="blur-footer blur-1"
+            /><img
+                src="../../assets/img/blur2.1ba0ab06cd517c0f1655.png"
+                alt=""
+                class="blur-footer blur-2"
+            /><img
+                src="../../assets/img/blur3.06d5a0e7a5ebaca8df64.png"
+                alt=""
+                class="blur-footer blur-3"
+            /><img
+                src="../../assets/img/blur4.0c5957ef5cf6d8a0db42.png"
+                alt=""
+                class="blur-footer blur-4"
+            />
+            <div class="overlay"></div>
+            <div class="content">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-md-8 left-content">
-                            <p class="nickName">
-                                <strong>Flag Shop XIN CHÀO</strong>
-                            </p>
-                            <p>
-                                <span
-                                    ><b>Flag Shop </b>được phát triển bởi
-                                    <b>Công ty ANT</b></span
-                                ><span
-                                    >Đội ngũ chúng tôi mang lại cho khách hàng
-                                    một sự trải nghiệm đáng nhớ nhất. Chúng tôi
-                                    luôn mong rằng tình cảm của các bạn cũng
-                                    nhiệt huyết như những chuyến đi bởi lẽ tình
-                                    cảm có lẽ là thứ tồn tại cuối cùng sau tất
-                                    cả !</span
-                                ><span
-                                    >Một lần nữa chúng tôi xin cảm ơn bạn đã
-                                    trải nghiệm dịch vụ tại
-                                    <b>Flag Shop </b></span
-                                >
-                            </p>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="row">
-                                <div class="col-12">
-                                    <label class="my-2"
-                                        >Hãy để lại thông tin để nhận
-                                        email</label
-                                    ><input
-                                        class="form-control"
-                                        placeholder="eg: ts@gmail.com"
-                                    />
-                                </div>
-                                <div class="col-12 my-3">
-                                    <button
-                                        class="ms-auto d-block btn btn-success"
-                                    >
-                                        Nhận thông tin
-                                    </button>
+                    <div class="d-flex custom-flex-mobile my-2">
+                        <div>
+                            <div class="header-footer">
+                                <i class="bi bi-amd"></i>
+                                <div>
+                                    <span>Shop bán điện thoại cho</span
+                                    ><span>Mọi Nhà</span>
                                 </div>
                             </div>
                         </div>
-                        <div
-                            class="col-12 d-flex fsoesdsds-s align-items-center"
-                        >
-                            <p>
-                                <span class="me-3"
-                                    >Liên hệ đến chúng tôi qua</span
-                                ><span
-                                    ><a class="mx-2" href="//"
-                                        ><i class="bi bi-github"></i></a
-                                    ><a class="mx-2" href="//"
-                                        ><i class="bi bi-facebook"></i></a
-                                ></span>
-                            </p>
+                        <div class="flex-1">
+                            <span class="border"></span>
                         </div>
+                    </div>
+                    <div class="content-footer mt-4 pt-3">
+                        <div class="left-content">
+                            <h4>Liên hệ</h4>
+                            <div class="mb-2">
+                                <span><i class="bi bi-telephone"></i></span
+                                ><span class="mx-2">0869.224.813</span>
+                            </div>
+                            <div class="mb-2">
+                                <span><i class="bi bi-envelope-check"></i></span
+                                ><span class="mx-2">flagshop@gmail.com</span>
+                            </div>
+                            <div class="mb-2">
+                                <span><i class="bi bi-pin-map"></i></span
+                                ><span class="mx-2"
+                                    >29b Định Công Thượng , Thành Phố Hà
+                                    Nội</span
+                                >
+                            </div>
+                        </div>
+                        <div class="center-content">
+                            <h4>Hỗ trợ</h4>
+                            <div class="mb-2">
+                                <span
+                                    ><i
+                                        class="bi bi-shield-fill-check"
+                                    ></i></span
+                                ><span class="mx-2"
+                                    ><a href="" target="_blank" rel="noreferrer"
+                                        >Chính sách bảo mật</a
+                                    ></span
+                                >
+                            </div>
+                            <div class="mb-2">
+                                <span
+                                    ><i
+                                        class="bi bi-chat-right-quote"
+                                    ></i></span
+                                ><span class="mx-2"
+                                    ><a href="" target="_blank" rel="noreferrer"
+                                        >Hướng dẫn bán hàng</a
+                                    ></span
+                                >
+                            </div>
+                        </div>
+                        <div class="right-content">
+                            <h4>Flag shop Shop bán hàng</h4>
+                            <div class="mb-2">
+                                <span class="d-block mb-2"
+                                    >Flag shop Shop bán hàng chúng tôi luôn đồng
+                                    hành cùng quý khách hàng, chúng tôi nghĩ
+                                    rằng niềm vui của bạn là những trải nghiệm
+                                    tuyệt vời mà chúng tôi đang cố gắng mang lại
+                                    cho bạn !</span
+                                ><span class="d-block"
+                                    >Chúng tôi cảm ơn bạn đã đồng hành cùng
+                                    chúng tôi, chúng tôi xin chúc bạn có thể
+                                    phát huy được sức mạnh của chính mình trong
+                                    việc saller và ADS</span
+                                >
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-5 mb-1">
+                    <div class="container pbs">
+                        <span class="footer-icon__CSahf"
+                            ><a href="/" class="me-3"
+                                ><span><i class="bi bi-facebook"></i></span></a
+                            ><a href="/" class="me-3"
+                                ><span><i class="bi bi-instagram"></i></span></a
+                            ><a href="/" class="me-3"
+                                ><span><i class="bi bi-github"></i></span></a
+                            ><a href="/" class="me-3"
+                                ><span><i class="bi bi-youtube"></i></span></a
+                            ><a href="/" class="me-3"
+                                ><span
+                                    ><i
+                                        class="bi bi-tiktok"
+                                    ></i></span></a></span
+                        ><span class="footer-end"
+                            >© 2018 - 2023 Flag shop. Nền tảng thương mại điện
+                            tử hàng đầu Việt Nam</span
+                        >
                     </div>
                 </div>
             </div>
