--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,32 +1,152 @@
-.footer-wrapper {
-  padding: 20px 10px 10px 10px;
-  background-color: #333444;
-  color: #f5f5f5;
+.footer-wrapper-sell {
+  background-color: #191d1e;
+  position: relative;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 8;
 }
-.footer-wrapper .left-content p:nth-child(1) {
-  text-transform: uppercase;
-  font-size: 20px;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
-}
-.footer-wrapper .left-content p:nth-child(2) {
-  padding: 6px;
-}
-.footer-wrapper .left-content p:nth-child(2) span {
-  display: block;
-  color: #f8f8f8;
-  line-height: 23px;
-  opacity: 0.6;
-  font-style: italic;
-}
-.footer-wrapper .fsoesdsds-s {
-  border-top: 1px solid #666;
-  padding: 10px 10px;
-}
-.footer-wrapper .fsoesdsds-s p {
-  padding: 0;
-  margin: 0;
-}
-.footer-wrapper .fsoesdsds-s p a {
+.footer-wrapper-sell a {
   text-decoration: none;
-  color: currentColor;
+  color: #fff;
+}
+
+.overlay {
+  background-color: rgba(255, 255, 255, 0.1);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  backdrop-filter: blur(14px);
+}
+
+.content {
+  backdrop-filter: blur(0px);
+  padding: 20px 0;
+}
+
+.blur-footer {
+  position: absolute;
+}
+
+.blur-1 {
+  height: 100%;
+  right: 0;
+  bottom: 0;
+}
+
+.blur-2 {
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.blur-3 {
+  height: 80%;
+  right: 50%;
+  bottom: 10px;
+}
+
+.blur-4 {
+  height: 80%;
+  top: 0;
+  right: 25%;
+}
+
+.img-logo {
+  width: 48px;
+  height: 48px;
+  object-fit: cover;
+}
+
+.header-footer {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.header-footer span {
+  display: block;
+  line-height: 28px;
+  font-weight: 600;
+  color: #fff;
+}
+
+.border {
+  height: 2px;
+  background-color: #ccc;
+  opacity: 0.6;
+  width: 100%;
+  display: block;
+  border-radius: 999999px;
+}
+
+.d-flex {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.content-footer {
+  color: rgb(255, 255, 255);
+  display: flex;
+  font-size: 14px;
+  gap: 15px;
+}
+.content-footer h4 {
+  font-size: 20px;
+  font-weight: 600;
+  -webkit-text-fill-color: transparent;
+  background: linear-gradient(180deg, #5ebbff, #a174ff);
+  -webkit-background-clip: text;
+  margin-bottom: 14px;
+}
+
+.right-content {
+  flex: 1;
+}
+.right-content span {
+  text-align: justify;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.pbs {
+  position: relative;
+  text-align: center;
+}
+
+.footer-icon {
+  position: absolute;
+  left: 20px;
+  display: flex;
+  align-items: center;
+  height: 28px;
+}
+.footer-icon a {
+  color: #5ebbff;
+}
+
+.footer-end {
+  line-height: 28px;
+  color: rgba(255, 255, 255, 0.4);
+}
+
+@media (max-width: 576px) {
+  .left-content,
+  .center-content,
+  .right-content {
+    width: 100%;
+  }
+  .custom-flex-mobile {
+    flex-wrap: wrap !important;
+  }
+  .content-footer {
+    flex-wrap: wrap;
+  }
 }/*# sourceMappingURL=footer.css.map */
