--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -39,3 +39,19 @@
         opacity: 0.8;
     }
 }
+
+@media (max-width: 576px) {
+    .d-sm-none-cus {
+        display: none;
+    }
+
+    .d-sm-block-cus {
+        display: block;
+    }
+}
+
+@media (min-width: 600px) {
+    .d-sm-block-cus {
+        display: none;
+    }
+}
