--- a/assets/scss/store.scss
+++ b/assets/scss/store.scss
@@ -467,3 +467,139 @@
         }
     }
 }
+
+.card-customize {
+    position: relative;
+    flex-shrink: 0;
+    height: 300px;
+    width: 200px;
+    background-color: #010101;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 7px 5px -5px #4d4b4b;
+    transition: 0.5s;
+    margin: 0 auto;
+
+    &:hover {
+        height: 450px;
+        width: 260px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+
+        .details {
+            bottom: 0 !important;
+
+            .wrapper {
+                display: block !important;
+            }
+        }
+    }
+
+    .top-bar {
+        transform: translateY(0.5rem);
+        width: 100%;
+        justify-content: space-between;
+        align-items: baseline;
+        padding: 0 1rem;
+        display: flex;
+
+        .stocks {
+            font-size: 0.8rem;
+            color: lightgreen;
+        }
+    }
+
+    .img-container {
+        position: absolute;
+        height: 185px;
+        width: 185px;
+        margin: 0 auto;
+        left: 0;
+        right: 0;
+        transform: translateY(35px);
+        display: flex;
+
+        img {
+            width: 100%;
+            align-self: center;
+        }
+
+        .out-of-stock-cover {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.25);
+            justify-content: center;
+            align-items: center;
+            display: none;
+
+            span {
+                font-weight: 900;
+                color: rgba(255, 200, 200, 0.75);
+                font-size: 1.5rem;
+            }
+        }
+    }
+
+    .details {
+        position: absolute;
+        height: 220px;
+        width: 100%;
+        background-color: #2e2f33;
+        border-radius: 20px;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 20px;
+        bottom: -165px;
+        transition: 0.25s;
+        color: #fff;
+
+        .name-fav {
+            justify-content: space-between;
+
+            strong {
+                font-weight: 600;
+                color: #fff;
+            }
+
+            button {
+                border: none;
+                background: none;
+                outline: none;
+                color: white;
+                cursor: pointer;
+                transition: 0.5s;
+            }
+        }
+
+        .wrapper {
+            flex-direction: column;
+            justify-content: space-between;
+            transform: translateY(5px);
+            display: none;
+
+            p {
+                font-size: 0.9rem;
+                padding: 5px 0;
+                font-weight: light;
+            }
+        }
+
+        .purchase {
+            width: 100%;
+            justify-content: space-between;
+            align-items: center;
+            display: flex;
+            align-items: center;
+
+            p {
+                font-weight: 500;
+            }
+        }
+    }
+
+    .btn-add {
+        background: none;
+        color: white;
+        padding: 6px 10px;
+    }
+}
