--- a/admin/views/admin.html
+++ b/admin/views/admin.html
@@ -97,6 +97,11 @@
                         <tbody class="t-body-render-admin"></tbody>
                     </table>
                 </div>
+                <div class="d-flex justify-content-end pt-5">
+                    <button class="btn btn-primary" id="log-out">
+                        Đăng xuất
+                    </button>
+                </div>
             </div>
 
             <div
